--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="assets/style.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/zmu7ajd.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700,800&display=swap"
+      rel="stylesheet"
+    />
+
     <script type="application/javascript" src="assets/index.js" defer></script>
   </head>
   <body>
